--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app{
+  font-size: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* margin-top: 10px; */
+}
+.btn-reset{
+  font-size: 0.8rem;
   color: white;
+  border-radius: 15px;
+  padding: 12px 15px;
+  margin-top: 25px;
+  transition: all 0.2s;
+  background-color: rgb(60, 60, 199);
+  box-shadow: 0px 0px 0px 1px orange;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-reset-active{
+  font-size: 0.8rem;
+  color: white;
+  border-radius: 15px;
+  padding: 12px 15px;
+  margin-top: 25px;
+  transition: all 0.2s;
+  background-color: rgb(60, 60, 199);
+  background-color: orange;
+  box-shadow: none;
 }
